--- a/app/css/agency.css
+++ b/app/css/agency.css
@@ -250,10 +250,11 @@ header .intro-text .intro-heading {
 }
 @media (min-width: 768px) {
     header .intro-text {
-        padding-top: 300px;
-        padding-bottom: 200px
+        /*padding-top: 300px;
+        padding-bottom: 200px */
     }
     header .intro-text .intro-lead-in {
+        padding-top: 50px;
         font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
         font-style: italic;
         font-size: 40px;
@@ -266,7 +267,7 @@ header .intro-text .intro-heading {
         font-weight: 700;
         font-size: 75px;
         line-height: 75px;
-        margin-bottom: 50px
+        margin-bottom: 50px;
     }
 }
 section {
@@ -721,6 +722,21 @@ img::selection {
 }
 img::-moz-selection {
     background: 0 0
+}
+.circle {
+  display: block;
+  width: 160px;
+  height: 160px;
+  margin: 1em auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-border-radius: 99em;
+  -moz-border-radius: 99em;
+  border-radius: 99em;
+  border: 5px solid #eee;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+  background-image: url('../images/aditya.jpg')
 }
 body {
     webkit-tap-highlight-color: #fed136
