--- a/app/css/preloader.css
+++ b/app/css/preloader.css
@@ -71,9 +71,6 @@
 }
 
 .browser {
-	margin: 0 auto;
-	min-height: 400px;
-	max-width: 1000px;
 	width: 100%;
 	background-size: 100%;
 }
@@ -255,4 +252,22 @@
 		font-size: 10vw;
 	}
 
+}
+.main-container{
+	margin: 0px 0px;
+	padding: 0px 0px;
+	width: 100%;
+}
+
+loaded>.ip-logo .loaded>path{
+	opacity: 0;
+}
+@media (min-width: 1200px){
+	.container{
+		padding: 0px 15px;
+	}
+}
+.padder{
+	padding: 5% 5%;
+	margin: 0px 2%;
 }
