--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,6 @@
+.loading .navbar {
+	opacity:0;
+}
 body {
     overflow-x: hidden;
     font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif
@@ -219,7 +222,7 @@ fieldset[disabled] .btn-xl.active {
         font-size: 1.5em
     }
 }
-.header1 {
+.header {
     background-image: url('../images/header-bg.jpg');
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -231,18 +234,18 @@ fieldset[disabled] .btn-xl.active {
     text-align: center;
     color: #fff
 }
-.header1 .intro-text {
+.header .intro-text {
     padding-top: 100px;
     padding-bottom: 50px
 }
-.header1 .intro-text .intro-lead-in {
+.header .intro-text .intro-lead-in {
     font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-style: italic;
     font-size: 22px;
     line-height: 22px;
     margin-bottom: 25px
 }
-.header1 .intro-text .intro-heading {
+.header .intro-text .intro-heading {
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
@@ -251,7 +254,7 @@ fieldset[disabled] .btn-xl.active {
     margin-bottom: 25px
 }
 @media (min-width: 768px) {
-    .header1 .intro-text .intro-lead-in {
+    .header .intro-text .intro-lead-in {
         /*padding-top: 300px;
         padding-bottom: 200px */
         padding-top: 60px;
@@ -261,7 +264,7 @@ fieldset[disabled] .btn-xl.active {
         line-height: 40px;
         margin-bottom: 25px;
     }
-    .header1 .intro-text .intro-heading {
+    .header .intro-text .intro-heading {
         font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
         text-transform: uppercase;
         font-weight: 700;
