--- a/app/css/style.css
+++ b/app/css/style.css
@@ -197,7 +197,7 @@ fieldset[disabled] .btn-xl.active {
 @media (min-width: 768px) {
     .navbar-default {
         background-color: transparent;
-        padding: 25px 0;
+        padding: 25px 5%;
         -o-transition: padding .3s;
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
@@ -216,7 +216,7 @@ fieldset[disabled] .btn-xl.active {
     }
     .navbar-default.navbar-shrink {
         background-color: #222;
-        padding: 10px 0
+        padding: 10px 8%;
     }
     .navbar-default.navbar-shrink .navbar-brand {
         font-size: 1.5em
